tests/core/error/fts-snippet-9.rq
SELECT (fts:snippet(?u, '>') AS ?snippet) { ?u fts:match "a" }
